files/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: zero-trust-api
  
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
