files/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000       # internal cluster port
      targetPort: 3000 # container port
      nodePort: 31000  # exposed outside
