files/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80       # port inside cluster
      targetPort: 80 # port of the pod
      nodePort: 30080 # port exposed outside
